--- a/todolist/package.json
+++ b/todolist/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "description": "oclif example Hello World CLI",
   "author": "Yuriy @YFdevel",
+  "type": "module",
   "bin": {
-    "todolist": "./bin/run"
+    "todolist": "bin/run.js"
   },
   "homepage": "https://github.com/YFdevel/todolist",
   "license": "MIT",
@@ -17,15 +18,24 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
+    "@oclif/color": "^1.0.11",
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^3.3.0"
+    "@oclif/plugin-plugins": "^3.3.0",
+    "@types/inquirer": "^9.0.3",
+    "bcrypt-ts": "^4.0.0",
+    "cli-color": "^2.0.3",
+    "crypto": "^1.0.1",
+    "inquirer": "^9.2.10",
+    "mongoose": "^7.4.5"
   },
   "devDependencies": {
     "@oclif/test": "^2.4.7",
     "@types/chai": "^4",
+    "@types/cli-color": "^2.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.18.46",
+    "@types/supports-color": "^8.1.1",
     "chai": "^4",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4",
